<resources>
    <string name="app_name">Plane Crash Story</string>
    <string name="text_and_question">Text and question</string>
    <string name="option_one">Option One</string>
    <string name="option_two">Option Two</string>
    <string name="option_three">Option Three</string>
    <string name="option_continue">Continue</string>
    <string name="reset">Play again</string>
    <string name="app_label">Plane Story</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="welcome">Welcome to Plane Crash Story!</string>
    <string name="start_game">Start Story</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>