<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_launcher_foreground"
    android:scaleType="centerCrop"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/playing"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/textpanel"
        android:layout_width="400dp"
        android:layout_height="375dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/panel" />

    <ImageView
        android:id="@+id/buttonpanel"
        android:layout_width="400dp"
        android:layout_height="375dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/panel" />

    <TextView
        android:id="@+id/description"
        android:layout_width="379dp"
        android:layout_height="173dp"
        android:text="@string/text_and_question"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/textpanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textpanel"
        app:layout_constraintVertical_bias="0.168" />

    <TextView
        android:id="@+id/question"
        android:layout_width="352dp"
        android:layout_height="142dp"
        android:maxLines="4"
        android:text="@string/text_and_question"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/textpanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textpanel"
        app:layout_constraintVertical_bias="0.922" />

    <Button
        android:id="@+id/button1"
        android:layout_width="374dp"
        android:layout_height="103dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/miriam_libre"
        android:hapticFeedbackEnabled="true"
        android:onClick="optionOneActor"
        android:shadowColor="@color/teal_700"
        android:text="@string/option_one"
        android:textAllCaps="false"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@id/buttonpanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonpanel"
        app:layout_constraintVertical_bias="0.031"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/end"
        android:layout_width="374dp"
        android:layout_height="103dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/miriam_libre"
        android:hapticFeedbackEnabled="true"
        android:onClick="endActor"
        android:text="@string/option_continue"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/buttonpanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonpanel"
        app:layout_constraintVertical_bias="0.031"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button2"
        android:layout_width="374dp"
        android:layout_height="103dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/miriam_libre"
        android:hapticFeedbackEnabled="true"
        android:onClick="optionTwoActor"
        android:shadowColor="@color/teal_700"
        android:text="@string/option_two"
        android:textAllCaps="false"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@id/buttonpanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonpanel"
        app:layout_constraintVertical_bias="0.478"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button3"
        android:layout_width="374dp"
        android:layout_height="103dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/miriam_libre"
        android:hapticFeedbackEnabled="true"
        android:onClick="optionThreeActor"
        android:shadowColor="@color/teal_700"
        android:text="@string/option_three"
        android:textAllCaps="false"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@id/buttonpanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonpanel"
        app:layout_constraintVertical_bias="0.937"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>